--- a/css/custom/_variables.scss
+++ b/css/custom/_variables.scss
@@ -1,4 +1,4 @@
-$primary: #8d021f; // burgundy
+$primary: #0d56c4; // burgundy
 $info: #7f7f7f; // grey
 
 $code-heading-background: #dededc; // light grey
