--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,9 @@
 <nav class="navbar navbar-expand-md navbar-light py-4">
   <div class="container">
     <a href="{{ site.baseurl }}/" class="navbar-brand">
-      <h3 class="d-inline align-middle pl-3 text-primary">Jekyll and BS4</h3>
-    </a>
+      <h3 class="d-inline align-middle pl-3 text-primary">{{site.title}}</h3>
+    </a><br>
+    <p>{{ site.description }}</p>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
